PostGIS 2.4.7
2019/xx/xx

  * Bug Fixes and Enchantments *

  - #4139, Make mixed-dimension ND index build tree correctly.
  WARNING: REINDEX your ND index on tables that have records with different M/Z
           dimensions for &&& operator to work predictably.
           (Darafei Praliaskouski, Arthur Lesuisse, Andrew Gierth, Raúl Marín)


PostGIS 2.4.6
2018/11/24

  * Bug Fixes and Enhancements *

  - #4160, Use qualified names in topology extension install (Raúl Marín)
  - #4181, ST_AsMVTGeom: Avoid type changes due to validation (Raúl Marín)
  - #4183, ST_AsMVTGeom: Drop invalid geometries after simplification (Raúl Marín)
  - #4189, Fix undefined behaviour in SADFWrite (Raúl Marín)
  - #4191, Fix undefined behaviour in ptarray_clone_deep (Raúl Marín)
  - #4020, Fix leftovers in topology upgrade from 2.1 (Sandro Santilli)
  - #4206, Replace deprecated use of getrelid with rt_fetch
           because getrelid is long deprecated and removed in pg12dev (Laurenz Albe)
  - #3457, Fix raster envelope shortcut in ST_Clip (Sai-bot)
  - #4215, Use floating point compare in ST_DumpAsPolygons (Darafei Praliaskouski)
  - #4059, #4177, Remove use of variable length arrays (Paul Ramsey)
  - #4216, Return to slicing for bbox access in gserialized (Paul Ramsey)
  - #4136, Proper repeated point removal on small polygons (Paul Ramsey)
  - #4223, ST_DistanceTree error for near parallel boxes (Paul Ramsey)
  - #4326, Allocate enough memory in gidx_to_string (Raúl Marín)
  - #4190, Avoid undefined behaviour in gserialized_estimate (Raúl Marín)
  - #4247, Avoid undefined behaviour in next_float functions (Raúl Marín)
  - #4249, Fix undefined behaviour in raster intersection (Raúl Marín)
  - #4246, Fix undefined behaviour in ST_3DDistance (Raúl Marín)
  - #4244, Avoid unaligned memory access in BOX2D_out (Raúl Marín)


PostGIS 2.4.5
2018/09/12

  * Bug Fixes and Enhancements

  - #4031, Survive to big MaxError tolerances passed to ST_CurveToLine
           (Sandro Santilli)