@@ -8,6 +8,8 @@ PostGIS 2.4.7
            dimensions for &&& operator to work predictably.
            (Darafei Praliaskouski, Arthur Lesuisse, Andrew Gierth, Raúl Marín)
 
+ - #4267, Enable Proj 6 deprecated APIs (Darafei Praliaskouski, Raúl Marín)
+
 
 PostGIS 2.4.6
 2018/11/24
